--- a/ci/cherwell-taskcat-noconfig.json
+++ b/ci/cherwell-taskcat-noconfig.json
@@ -5,7 +5,7 @@
     },
     {
         "ParameterKey": "ClientID",
-        "ParameterValue": "0a07f8b1-d800-424a-a8ab-66146f4e0991"
+        "ParameterValue": "0000000000000000000000000000000"
     },
     {
         "ParameterKey": "Grant",
@@ -13,7 +13,7 @@
     },
     {
         "ParameterKey": "Url",
-        "ParameterValue": "http://54.153.77.81"
+        "ParameterValue": "http://yourserver"
     },
     {
         "ParameterKey": "Password",
