--- a/templates/config-stack.json
+++ b/templates/config-stack.json
@@ -14,6 +14,14 @@
                 },
                 {
                     "Label": {
+                        "default": "AWS Config Configuration"
+                    },
+                    "Parameters": [
+                        "ConfigRules"
+                    ]
+                },
+                {
+                    "Label": {
                         "default": "Configuration Aggregator Configuration"
                     },
                     "Parameters": [
@@ -47,6 +55,15 @@
         "SourceRegions": {
             "Type": "CommaDelimitedList",
             "Description": "List of regions to aggregate"
+        },
+        "ConfigRules": {
+            "Description": "Enabled for monitoring storage encryption (Amazon Elastic Block Store, Amazon S3, and Amazon Relational Database Service), AWS Identity and Access Management (IAM) password policy, root account multi-factor authentication (MFA), Amazon S3 public read and write, and insecure security group rules.(Cost will apply)",
+            "Type": "String",
+            "AllowedValues": [
+                "True",
+                "False"
+            ],
+            "Default": "True"
         }
     },
     "Conditions": {
@@ -58,6 +75,14 @@
                 {
                     "Ref": "AWS::Region"
                 }
+            ]
+        },
+        "EnableConfig": {
+            "Fn::Equals": [
+                {
+                    "Ref": "ConfigRules"
+                },
+                "True"
             ]
         }
     },
@@ -173,6 +198,7 @@
         },
         "EncryptedVolumesRule": {
             "Type": "AWS::Config::ConfigRule",
+            "Condition": "EnableConfig",
             "DependsOn": [
                 "ConfigRecorder"
             ],
@@ -200,6 +226,7 @@
         },
         "s3BucketServerSideEncryptionEnabledEncryptedVolumesRule": {
             "Type": "AWS::Config::ConfigRule",
+            "Condition": "EnableConfig",
             "DependsOn": [
                 "ConfigRecorder"
             ],
@@ -227,6 +254,7 @@
         },
         "RdsStorageEncryptedRule": {
             "Type": "AWS::Config::ConfigRule",
+            "Condition": "EnableConfig",
             "DependsOn": [
                 "ConfigRecorder"
             ],
@@ -254,6 +282,7 @@
         },
         "IamPasswordPolicyRule": {
             "Type": "AWS::Config::ConfigRule",
+            "Condition": "EnableConfig",
             "DependsOn": [
                 "ConfigRecorder"
             ],
@@ -276,6 +305,7 @@
         },
         "RootAccountMfaEnabled": {
             "Type": "AWS::Config::ConfigRule",
+            "Condition": "EnableConfig",
             "DependsOn": [
                 "ConfigRecorder"
             ],
@@ -298,6 +328,7 @@
         },
         "S3BucketPublicReadRule": {
             "Type": "AWS::Config::ConfigRule",
+            "Condition": "EnableConfig",
             "DependsOn": [
                 "ConfigRecorder"
             ],
