Fixed issue where the Quick Start would fail to deploy if AWS Config configuration recorder had already been enabled in the accounbt. AWS Config currently only allows one configuration recorder and delivery channel to be deployed per account per region. Added code to make "enabling" the recorder optional via a template parameter.

--- a/ci/cherwell-taskcat-noconfig.json
+++ b/ci/cherwell-taskcat-noconfig.json
@@ -30,5 +30,21 @@
     {
         "ParameterKey": "QSS3BucketName",
         "ParameterValue": "$[taskcat_autobucket]"
+    },
+    {
+        "ParameterKey": "DeployAWSConfigSupport",
+        "ParameterValue": "True"
+    },
+    {
+        "ParameterKey": "ConfigRules",
+        "ParameterValue": "True"
+    },
+    {
+        "ParameterKey": "IncludeGlobalResourceTypes",
+        "ParameterValue": "False"
+    },
+    {
+        "ParameterKey": "EnableAWSConfigRecorder",
+        "ParameterValue": "True"
     }
 ]
